--- a/portfolio.html
+++ b/portfolio.html
@@ -12,5 +12,11 @@
     <center>
     <h1>This is my Portfolio Page!</h1>
   </center>>
+		  <center>
+   <h1>
+	   
+		  </h1>
+		<img src="https://media.tenor.com/-zx5iFEHQ6UAAAAC/chess-checkmate.gif" height="500">	  
+     We created a 
 	  </body>
 	</html>
