--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,5 @@
 <!doctype html>
-  <style>
-  {
-   margin: 10px 50px;
-	  }
-  </style>
+ 
 	<html lang="en">
 	  <head>
 	    <meta charset="utf-8">
@@ -14,6 +10,12 @@
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
+    <body>
+      <style>
+  {
+   margin: 10px 50px;
+  }
+  </style>
     <center>
     <h1>This is my Portfolio Page!</h1>
   
@@ -21,7 +23,7 @@
 	  This is our Hangman project that my group did. The program selects words randomly from a preset word bank with the goal of guessing the correct word before the body of he person gets compleltely drawn. If the player guesses a letter or word incorrectly, thgen the program draws a body partuntil the entire figure is drawn. ay incorrect guesses are put into the letter bank bellow the spaces. 
         </h1>
 	    <br>
-	  <img src="https://media.tenor.com/-zx5iFEHQ6UAAAAC/chess-checkmate.gif" height="500">	  
-        <center>
+	  <img src="hangman.PNG" height="500">	  
+        </center>
 	</body>
 	</html>
