--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,22 @@
   </style>
     <center>
     <h1>This is my Portfolio Page!</h1>
-  
-        <h1>
+            <br>
+	    <br>
+	    <br>
+	    <br>
+	    <br>
+	    <br>
+	    <br>
+	    <br>
+	    <br>
+	    <br>
+	<h1>
+		Project 1
+	    </h1>
+        <h2>
 	  This is our Hangman project that my group did. The program selects words randomly from a preset word bank with the goal of guessing the correct word before the body of he person gets compleltely drawn. If the player guesses a letter or word incorrectly, thgen the program draws a body partuntil the entire figure is drawn. ay incorrect guesses are put into the letter bank bellow the spaces. 
-        </h1>
+        </h2>
 	    <br>
 	  <img src="hangman.PNG" height="500">	  
         </center>
