--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <body>
       <style>
   {
-   margin: 10px 50px;
+   margin: 1cm 3cm;
   }
   </style>
     <center>
@@ -32,7 +32,7 @@
 		Project 1
 	    </h1>
         <h2>
-	  This is our Hangman project that my group did. The program selects words randomly from a preset word bank with the goal of guessing the correct word before the body of he person gets compleltely drawn. If the player guesses a letter or word incorrectly, thgen the program draws a body partuntil the entire figure is drawn. ay incorrect guesses are put into the letter bank bellow the spaces. 
+	  This is our Hangman project that my group did. The program selects words randomly from a preset word bank with the goal of guessing the correct word before the body of gets completely drawn. If the player guesses a letter or word incorrectly, then the program draws a body part until the entire figure is drawn. Any correct guesses are put into the letter bank bellow the spaces. 
         </h2>
 	    <br>
 	  <img src="hangman.PNG" height="500">	  
