--- a/portfolio.html
+++ b/portfolio.html
@@ -31,11 +31,24 @@
 	<h1>
 		Project 1
 	    </h1>
+	    <br>
         <h2>
-	  This is our Hangman project that my group did. The program selects words randomly from a preset word bank with the goal of guessing the correct word before the body of gets completely drawn. If the player guesses a letter or word incorrectly, then the program draws a body part until the entire figure is drawn. Any correct guesses are put into the letter bank bellow the spaces. 
+	  This is my Hangman project that my group did. The program selects words randomly from a preset word bank with the goal of guessing the correct word before the body of gets completely drawn. If the player guesses a letter or word incorrectly, then the program draws a body part until the entire figure is drawn. Any correct guesses are put into the letter bank bellow the spaces. 
         </h2>
 	    <br>
 	  <img src="hangman.PNG" height="500">	  
+	    <br>
+	    <br>
+	    <br>
+	    <h1>
+		    Project 2
+	    </h1>
+	    <br>
+	    <h2>
+		 This is my minion stacker game that my group did. The program contains a title screen and the main game. Once any key is typed into the command terminal, the game starts. Minions begin to continously fall from the sky and you are given control of a sprite to catch these minions. The minions stack on top of the previous minion stacked until the time runs out. Every minion is worth 250 points and you are given 15 seconds to stack as many minions as possible.
+		    </h2>
+	    <img src = "MinionStackerScreenshot.PNG" height = "500">
+	   
         </center>
 	</body>
 	</html>
