--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
 	    <h2>
 		 This is my minion stacker game that my group did. The program contains a title screen and the main game. Once any key is typed into the command terminal, the game starts. Minions begin to continously fall from the sky and you are given control of a sprite to catch these minions. The minions stack on top of the previous minion stacked until the time runs out. Every minion is worth 250 points and you are given 15 seconds to stack as many minions as possible.
 		    </h2>
-	    <img src = "MinionStackerScreenshot.png" height = "500">
+	    <img src="MinionStackerScreenshot.jpg" height="500">
 	   
         </center>
 	</body>
