--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
 		This is a game that my group made on Scratch. It is a Kraken game where you are supposed to avoid the healthy food that falls from the sky and avoid the Kraken that lurks in the water below.
 
 		    </h2>
-	    <img src="" height="500">
+	    <img src="WatchTheApples.jpg" height="500">
         </center>
 	</body>
 	</html>
