--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
 	    </h1>
 	    <br>
 	    <h2>
-		This is a game that my group made on Scratch. It is a Kraken game where you are supposed to avoid the healthy food that falls from the sky and avoid the Kraken that lurks in the water below.
+		This is a game that my group made on Scratch. It is a Kraken game where you are supposed to avoid the healthy food that falls from the sky and avoid the Kraken that lurks in the water below. This kraken is instead hands that seek to pull down to the bowl of cheeto puffs. This game also provides a level of difficulty after achieving a certain score. Score increments after every apple is avoided.
 
 		    </h2>
 	    <img src="WatchTheApples.jpg" height="500">
