--- a/portfolio.html
+++ b/portfolio.html
@@ -60,6 +60,17 @@
 
 		    </h2>
 	    <img src="WatchTheApples.jpg" height="500">
+	    <br>
+	    <br>
+	    <br>
+	    <h1>
+		    Project 4
+	    </h1>
+	    <br>    
+	    <h2>
+		    This graph represents the honey production of each state in the US from 2002 to 2016. My group found and analyzed data found from the USDA website and converted into a visual representation of which states have been the biggest producers of honey.
+	    </h2>
+	     <img src="honeyGraph.png" height="500">
         </center>
 	</body>
 	</html>
