--- a/portfolio.html
+++ b/portfolio.html
@@ -71,6 +71,18 @@
 		    This graph represents the honey production of each state in the US from 2002 to 2016. My group found and analyzed data found from the USDA website and converted into a visual representation of which states have been the biggest producers of honey.
 	    </h2>
 	     <img src="honeyGraph.jpg" height="500">
+	    
+	    <br>
+	    <br>
+	    <br>
+	    <h1>
+		    Project 5
+	    </h1>
+	    <br>
+	    <h2>
+		    This is the model simulation that my team analyzed. It shows the general model of passing down genetics, in the way of crossing over and mutations. The model shows how these genetic modifcations affect the fitness of a species. The genetic diversity of the population is also modeled.
+	      </h2>
+	         <img src="SimpleGeneticModel.jpg" height="500">
         </center>
 	</body>
 	</html>
