--- a/portfolio.html
+++ b/portfolio.html
@@ -83,6 +83,16 @@
 		    This is the model simulation that my team analyzed. It shows the general model of passing down genetics, in the way of crossing over and mutations. The model shows how these genetic modifcations affect the fitness of a species. The genetic diversity of the population is also modeled.
 	      </h2>
 	         <img src="SimpleGeneticModel.jpg" height="500">
+	    <br>
+	    <br>
+	    <br>
+	    <h1>
+		    Project 6
+	    </h1>
+	    <h2> 
+		    This graph is the predicted data that one would expect from the conditions specified in the 3.1.6 lesson for the Inland Forests. We were given data for the sensors on a rover in an alien planet and tasked to compare this data to predicted data and my group concluded that this data followed the conditions of the Inland Forest.
+	    </h2>
+	    <img src="InlandForests.jpg" height="500">
         </center>
 	</body>
 	</html>
